# hvacbench

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  PUBLICATION_TODO.md  README.md  SOFTWAREX_MANUSCRIPT_PROMPT.md  TODO.md  asciinema.md  mkdocs.yml  prompt.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  backends.md  cli.md  concepts.md  development.md  getting-started.md  index.md  softwarex.md
examples/: run_bestest_air_boptest_env.py  run_bestest_air_boptest_rollout_env.py  run_mock_env.py  run_ttm_forecaster_env.py
src/hvacbench/: __init__.py  cli.py  config.py  energy_price.py
src/hvacbench/boptest/: __init__.py  base.py  bestest_air.py  client.py  mock.py  testcase.py
src/hvacbench/data/: __init__.py  electricity_prices_bestest_air_1y.csv
src/hvacbench/envs/: __init__.py  base.py  boptest_base_env.py  boptest_env.py  boptest_evaluation_env.py  boptest_rollout_env.py  safe_env.py  ttm_env.py
src/hvacbench/models/: __init__.py  base.py  mock.py  ttm.py
src/hvacbench/providers/: __init__.py  base.py  bestest_air.py  mock.py
src/hvacbench/rewards/: __init__.py  base.py  simple.py
src/hvacbench/safety/: __init__.py  control_safety.py
src/hvacbench/schemas/: __init__.py  float_array.py  observation.py  step_return.py
src/hvacbench/utils/: __init__.py  validation.py
tests/: test_bestest_air_csv_provider.py  test_bestest_air_mapping.py  test_boptest_env_bestest_air.py  test_boptest_evaluation_env.py  test_boptest_rollout_env_bestest_air.py  test_cli.py  test_safe_env.py  test_ttm_env.py
