[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvacbench"
version = "0.1.0"
description = "A Gym-style digital twin environment for RL control of building HVAC systems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
