[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvacbench"
version = "0.1.0"
description = "A Gym-style digital twin environment for RL control of building HVAC systems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "granite-tsfm @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.3.1",
    "numpy>=2.4.4",
    "transformers<4.46.0",
    "scikit-learn<1.8.0",
    "jaxtyping>=0.3.10",
    "beartype>=0.22.9",
    "requests>=2.34.2",
    "pydantic>=2.13.4",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-ignore = ["F722", "F821"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
