[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvacbench"
version = "0.1.0"
description = "Receding-horizon environments for validating learned HVAC surrogates."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "hvacbench contributors" },
]
keywords = [
    "building control",
    "boptest",
    "surrogate models",
    "hvac",
    "reinforcement learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "granite-tsfm @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.3.1",
    "numpy>=2.4.4",
    "transformers<4.46.0",
    "scikit-learn<1.8.0",
    "jaxtyping>=0.3.10",
    "beartype>=0.22.9",
    "requests>=2.34.2",
    "pydantic>=2.13.4",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/dcg-udl-cat/hvacbench"
Documentation = "https://dcg-udl-cat.github.io/hvacbench/"
Repository = "https://github.com/dcg-udl-cat/hvacbench"
Issues = "https://github.com/dcg-udl-cat/hvacbench/issues"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-ignore = ["F722", "F821"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
